crates/uitest/fixtures/ty/def/trait_impl_conflict_const.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/def/trait_impl_conflict_const.fe
---
error[5-0001]: conflict trait implementation
  ┌─ trait_impl_conflict_const.fe:4:33
  │
3 │ impl Trait<1> for i32 {}
  │                   --- conflict with this trait implementation
4 │ impl<const N: u32> Trait<N> for i32 {}
  │                                 ^^^ conflict trait implementation

error[5-0001]: conflict trait implementation
  ┌─ trait_impl_conflict_const.fe:9:20
  │
8 │ impl<const N: u32> Trait<N> for Foo<N> {}
  │                                 ------ conflict with this trait implementation
9 │ impl Trait<10> for Foo<10> {}
  │                    ^^^^^^^ conflict trait implementation


